GL/src/test/deca/syntax/invalid/deca_complet/circularB.deca
// Description :
// test inclusion circulaire (en boucle)
//
// Resultat :
// Erreur lexicale 
// Ligne 8 : Circular include for file circularB

#include "circularA.deca"

